show style when dialog is created with existing cond format, fdo#59778

Change-Id: Ic1218179cd9c87ec15826adc861d505339a05f2d